// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`clear() skips blur and endEditing events when \`skipBlur: true\`: value: "Hello!" skipBlur: true 1`] = `
[
  {
    "name": "focus",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "target": 0,
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "selection": {
          "end": 6,
          "start": 0,
        },
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "key": "Backspace",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "change",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "changeText",
    "payload": "",
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "selection": {
          "end": 0,
          "start": 0,
        },
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
]
`;

exports[`clear() supports basic case: value: "Hello! 1`] = `
[
  {
    "name": "focus",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "target": 0,
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "selection": {
          "end": 6,
          "start": 0,
        },
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "key": "Backspace",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "change",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "changeText",
    "payload": "",
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "selection": {
          "end": 0,
          "start": 0,
        },
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "endEditing",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "target": 0,
        "text": "",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "blur",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "target": 0,
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
]
`;

exports[`clear() supports defaultValue prop: defaultValue: "Hello Default!" 1`] = `
[
  {
    "name": "focus",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "target": 0,
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "selection": {
          "end": 14,
          "start": 0,
        },
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "key": "Backspace",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "change",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "changeText",
    "payload": "",
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "selection": {
          "end": 0,
          "start": 0,
        },
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "endEditing",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "target": 0,
        "text": "",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "blur",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "target": 0,
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
]
`;

exports[`clear() supports multiline: value: "Hello World!\\nHow are you?" multiline: true, 1`] = `
[
  {
    "name": "focus",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "target": 0,
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "selection": {
          "end": 25,
          "start": 0,
        },
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "key": "Backspace",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "change",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "changeText",
    "payload": "",
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "selection": {
          "end": 0,
          "start": 0,
        },
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "contentSizeChange",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "contentSize": {
          "height": 16,
          "width": 0,
        },
        "target": 0,
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "endEditing",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "target": 0,
        "text": "",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "blur",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "target": 0,
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
]
`;

exports[`clear() works when not all events have handlers 1`] = `
[
  {
    "name": "changeText",
    "payload": "",
  },
  {
    "name": "endEditing",
    "payload": {
      "currentTarget": {},
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "target": 0,
        "text": "",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
]
`;
